--- a/.github/workflows/daily_run.yml
+++ b/.github/workflows/daily_run.yml
@@ -52,5 +52,5 @@ jobs:
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: product_jsons-${{ github.run_id }}
-        path: output/
+        name: output-${{ github.run_id }}
+        path: output.json
